[package]
name = "wasm-pubsub"
version = "0.1.0"
authors = ["Samba Diallo <samba.diallo@pubnub.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
futures = "0.1.20"
wasm-bindgen = { version = "0.2.48", features = ["serde-serialize"]  }
js-sys = "0.3.25"
wasm-bindgen-futures = "0.3.25"
serde = { version = "1.0.80", features = ["derive"] }
serde_derive = "^1.0.59"
percent-encoding = "1.0.1"
serde_json = "1.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
  'console'
]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true


# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. However, it is slower than the default
# allocator, so it's not enabled by default.
wee_alloc = { version = "0.4.2", optional = true }


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"
